Fixed images being squashed on the news page

--- a/static/src/assets/scss/components/_articles.scss
+++ b/static/src/assets/scss/components/_articles.scss
@@ -20,9 +20,8 @@ $news-article-height: $news-feature-article-height / 2;
 
         img {
             margin-bottom: $spacing-small;
-            width: 100%;
             height: auto;
-            max-height: 50%;
+            max-height: 200px;
         }
 
         p {
